Fix page list for student table

--- a/app/templates/students/students.html
+++ b/app/templates/students/students.html
@@ -68,7 +68,7 @@
           data-pagination="true"
           data-page-size="5"
           data-id-field="id"
-          data-page-list="[5, 10, 25, 50 100, all]">
+          data-page-list="[5, 10, 25, 50, 100, all]">
           <thead>
             <tr>
               <th data-field="id" data-visible="true" data-sortable="true" data-searchable="true">ID</th>
