--- a/app/templates/colleges/colleges.html
+++ b/app/templates/colleges/colleges.html
@@ -68,7 +68,7 @@
           data-pagination="true"
           data-page-size="5"
           data-id-field="code"
-          data-page-list="[5, 10, 25, 50 100, all]">
+          data-page-list="[5, 10, 25, 50, 100, all]">
           <thead>
             <tr>
               <th data-field="code" data-visible="true" data-sortable="true">Code</th>
