Add strict search for student table

--- a/app/templates/students/students.html
+++ b/app/templates/students/students.html
@@ -61,6 +61,7 @@
           data-show-search-button="true"
           data-show-search-clear-button="true"
           data-advanced-search="true"
+          data-strict-search="true"
           data-id-table="advancedTable"
           data-show-refresh="true"
           data-show-columns="true"
