Fix height for student table

--- a/app/templates/students/students.html
+++ b/app/templates/students/students.html
@@ -57,6 +57,7 @@
         <table
           id="student-table"
           data-toggle="table"
+          data-height="730"
           data-search="true"
           data-show-search-button="true"
           data-show-search-clear-button="true"
