--- a/app/templates/students/add_student.html
+++ b/app/templates/students/add_student.html
@@ -53,8 +53,9 @@
         </div>
       </div>
       <div class="container-fluid my-5">
-        <form method="POST" action="/students/add_student">
+        <form method="POST" action="/students/add_student" enctype="multipart/form-data">
           {{ form.csrf_token() }}
+          {{ render_form_row([form.image_file]) }}
           {{ render_form_row([form.id]) }}
           {{ render_form_row([form.first_name]) }}
           {{ render_form_row([form.middle_name]) }}
