--- a/app/templates/students/edit_student.html
+++ b/app/templates/students/edit_student.html
@@ -58,7 +58,7 @@
         <form method="POST" action="/students/edit_student/{{ form.id.data }}" enctype="multipart/form-data">
           {{ form.csrf_token() }}
           <p>
-            <img src="{{ image_url }}" alt="Not Found" onerror=this.src="https://res.cloudinary.com/johnmichaelbacasno/image/upload/t_media_lib_thumb/v1635741147/ssis/student_images/student_image_not_found.png" width="100" height="100" style="border-radius: 50%;">
+            <img src="{{ images['student_image_url']}}" alt="Not Found" onerror=this.src="{{ images['alternate_image_url']}} width="100" height="100" style="border-radius: 50%;">
           </p>
           {{ render_form_row([form.image_file]) }}
           {{ render_form_row([form.first_name]) }}
