--- a/app/templates/students/edit_student.html
+++ b/app/templates/students/edit_student.html
@@ -58,9 +58,9 @@
         <form method="POST" action="/students/edit_student/{{ form.id.data }}" enctype="multipart/form-data">
           {{ form.csrf_token() }}
           <p>
-            <img src="{{ images['student_image_url']}}" alt="Not Found" onerror=this.src="{{ images['alternate_image_url']}} width="100" height="100" style="border-radius: 50%;">
+            <img src="{{ images['student_image_url']}}" class="img-thumbnail" alt="Not Found" onerror=this.src="{{ images['alternate_image_url']}} width="200" height="200" style="border-radius: 50%;">
           </p>
-          {{ render_form_row([form.image_file]) }}
+          {{ render_form_row([form.image_file], col_map={"image_file": "col-md-4"}) }}
           {{ render_form_row([form.first_name]) }}
           {{ render_form_row([form.middle_name]) }}
           {{ render_form_row([form.last_name]) }}
